# bazel-testz

./: BUILD.bazel  MODULE.bazel  build_bad_class.py
.github/workflows/: ijar-asan-repro.yml
src/main/java/poc/: App.java
